Bug 468185 - KAdressbook crashes when opened
Summary: KAdressbook crashes when opened
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.19.3
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 466761 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-04-05 22:28 UTC by Marco
Modified: 2023-04-28 15:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marco 2023-04-05 22:28:16 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Opening KAddressbook from KMail menu
2. KAddessbook crashes
3. It also crashes immediately after displaying the window when calling from command line of a shell

OBSERVED RESULT
Crash

EXPECTED RESULT
No Crash ;-)

Application: kaddressbook (5.19.3 (21.12.3))

Qt Version: 5.15.2
Frameworks Version: 5.90.0
Operating System: Linux 5.14.21-150400.24.46-default x86_64
Windowing System: X11
Distribution: "openSUSE Leap 15.4"
DrKonqi: 5.24.4 [KCrashBackend]

-- Information about the crash:
- What I was doing when the application crashed:
Opening KAddressbook from KMail menu
I think I scrolled a little bit through the contacts, but it crashes also just after opning.
I assume it has to do with the contacts and otentially with contact groups that are stored.

The crash can be reproduced every time.

-- Backtrace:
Application: KAddressBook (kaddressbook), signal: Aborted

[KCrash Handler]
#4  0x00007fb1f1842c6b in raise () from /lib64/libc.so.6
#5  0x00007fb1f1844305 in abort () from /lib64/libc.so.6
#6  0x00007fb1f1cb5675 in ?? () from /usr/lib64/libstdc++.so.6
#7  0x00007fb1f1cc0d0c in ?? () from /usr/lib64/libstdc++.so.6
#8  0x00007fb1f1cc0d77 in std::terminate() () from /usr/lib64/libstdc++.so.6
#9  0x00007fb1f1cc0fd8 in __cxa_throw () from /usr/lib64/libstdc++.so.6
#10 0x00007fb1ef212946 in Akonadi::Item::throwPayloadException(int, int) const () from /usr/lib64/libKF5AkonadiCore.so.5
#11 0x00007fb1f4f33cb3 in Akonadi::Item::payloadImpl<KContacts::Addressee> (this=0x7fb19c05d6b8) at /usr/include/KF5/AkonadiCore/akonadi/item.h:793
#12 0x00007fb1f4f3ca52 in Akonadi::Item::payload<KContacts::Addressee> (this=this@entry=0x7fb19c05d6b8) at /usr/include/KF5/AkonadiCore/akonadi/item.h:768
#13 0x00007fb1f4f382d3 in ContactInfoProxyModel::ContactCacheData::setData (this=0x55c35ce0b6c8, item=...) at /usr/src/debug/kaddressbook-21.12.3-bp154.1.22.x86_64/src/contactinfoproxymodel.cpp:365
#14 0x00007fb1f4f3a0a2 in ContactInfoProxyModel::slotFetchJobFinished (this=0x55c35cd35630, job=<optimized out>) at /usr/src/debug/kaddressbook-21.12.3-bp154.1.22.x86_64/src/contactinfoproxymodel.cpp:292
#15 0x00007fb1f234c1c7 in QtPrivate::QSlotObjectBase::call (a=0x7ffcc2165790, r=0x55c35cd35630, this=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#16 doActivate<false> (sender=0x55c35cf97dc0, signal_index=6, argv=0x7ffcc2165790) at kernel/qobject.cpp:3886
#17 0x00007fb1f2345782 in QMetaObject::activate (sender=sender@entry=0x55c35cf97dc0, m=m@entry=0x7fb1f42736e0 <KJob::staticMetaObject>, local_signal_index=local_signal_index@entry=3, argv=argv@entry=0x7ffcc2165790) at kernel/qobject.cpp:3946
#18 0x00007fb1f4020f7c in KJob::result (this=this@entry=0x55c35cf97dc0, _t1=<optimized out>, _t1@entry=0x55c35cf97dc0, _t2=...) at /usr/src/debug/kcoreaddons-5.90.0-150400.3.2.3.x86_64/build/src/lib/KF5CoreAddons_autogen/include/moc_kjob.cpp:633
#19 0x00007fb1f4022481 in KJob::finishJob (this=0x55c35cf97dc0, emitResult=<optimized out>) at /usr/src/debug/kcoreaddons-5.90.0-150400.3.2.3.x86_64/src/lib/jobs/kjob.cpp:98
#20 0x00007fb1f2342d9b in QObject::event (this=0x55c35cf97dc0, e=0x55c35cf99310) at kernel/qobject.cpp:1314
#21 0x00007fb1f32c73bc in QApplicationPrivate::notify_helper (this=this@entry=0x55c35c752860, receiver=receiver@entry=0x55c35cf97dc0, e=e@entry=0x55c35cf99310) at kernel/qapplication.cpp:3632
#22 0x00007fb1f32ce1a0 in QApplication::notify (this=0x7ffcc2165e20, receiver=0x55c35cf97dc0, e=0x55c35cf99310) at kernel/qapplication.cpp:3156
#23 0x00007fb1f230ec23 in QCoreApplication::notifyInternal2 (receiver=0x55c35cf97dc0, event=0x55c35cf99310) at kernel/qcoreapplication.cpp:1064
#24 0x00007fb1f230edfe in QCoreApplication::sendEvent (receiver=receiver@entry=0x55c35cf97dc0, event=event@entry=0x55c35cf99310) at kernel/qcoreapplication.cpp:1462
#25 0x00007fb1f2311641 in QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x55c35c7304b0) at kernel/qcoreapplication.cpp:1821
#26 0x00007fb1f2311bc8 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1680
#27 0x00007fb1f2371983 in postEventSourceDispatch (s=0x55c35c8a1530) at kernel/qeventdispatcher_glib.cpp:277
#28 0x00007fb1ea07582b in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#29 0x00007fb1ea075bd0 in ?? () from /usr/lib64/libglib-2.0.so.0
#30 0x00007fb1ea075c5c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#31 0x00007fb1f237102c in QEventDispatcherGlib::processEvents (this=0x55c35c8a71f0, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#32 0x00007fb1f230d48a in QEventLoop::exec (this=this@entry=0x7ffcc2165d60, flags=..., flags@entry=...) at kernel/qeventloop.cpp:232
#33 0x00007fb1f2316cc7 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1375
#34 0x000055c35b807259 in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/kaddressbook-21.12.3-bp154.1.22.x86_64/src/main.cpp:90
[Inferior 1 (process 21402) detached]

Possible duplicates by query: bug 452621, bug 446579, bug 437409, bug 437263, bug 413844.

An https://bugs.kde.org/ berichten
Comment 1 Bug Janitor Service 2023-04-27 21:38:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/kaddressbook/-/merge_requests/30
Comment 2 Carl Schwan 2023-04-27 21:44:11 UTC
*** Bug 466761 has been marked as a duplicate of this bug. ***
Comment 3 Carl Schwan 2023-04-28 15:40:10 UTC
Git commit fb777103795377d5467ba56b38a47479ed61686e by Carl Schwan.
Committed on 27/04/2023 at 21:36.
Pushed by carlschwan into branch 'master'.

Fix checking if item is valid

This always returned true since result was initialised with true and
true | bool will always return true

M  +1    -6    src/contactinfoproxymodel.cpp

https://invent.kde.org/pim/kaddressbook/commit/fb777103795377d5467ba56b38a47479ed61686e
Comment 4 Carl Schwan 2023-04-28 15:40:35 UTC
Git commit 40b4923fd1aaa178ddb3befb0f51f8a460f80880 by Carl Schwan.
Committed on 28/04/2023 at 15:40.
Pushed by carlschwan into branch 'release/23.04'.

Fix checking if item is valid

This always returned true since result was initialised with true and
true | bool will always return true


(cherry picked from commit fb777103795377d5467ba56b38a47479ed61686e)

M  +1    -6    src/contactinfoproxymodel.cpp

https://invent.kde.org/pim/kaddressbook/commit/40b4923fd1aaa178ddb3befb0f51f8a460f80880