Fix checking if item is valid

This always returned true since result was initialised with true and
true | bool will always return true

BUG: 468185